2007-01-22  Albert Chu <chu11@llnl.gov>

	* common/src/tool-common.c (ipmi_open): Try devices more intelligently.

	* libfreeipmi/include/freeipmi/locate/ipmi-locate.h,
	libfreeipmi/src/locate/ipmi-locate.c
	(ipmi_locate_discover_device_info): New function.

	* libfreeipmi/src/locate/ipmi-locate.c
	(_ipmi_locate_get_device_info): Add flag to try/not-try defaults.

2008-01-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/ipmi-api.c (ipmi_ctx_open_inband): Remove
	legacy requirement for required SSIF driver path.
	
2008-01-22  Albert Chu <chu11@llnl.gov>

        * common/doc/manpage-common-inband.man: Tweak english.
	
2008-01-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache.c: Fix "parmaeters" typo.
	
2008-01-22  A Balamurugan  <bala@zresearch.com>

	* common/doc/manpage-common-inband.man: updated.

	* ipmi-locate/src/ipmi-locate.c: displays device-address with hex
	prefix.

2008-01-16  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/driver/ipmi-ssif-driver.c: Add more debugging.
	Remove inlineness for debugging.
	
2008-01-09  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Obsolete older freeipmi-ipmimonitoring
	subpackage.
	
2008-01-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/: Use macros instead of hard coded
	index numbers.

	* ipmi-locate/ipmi-locate.8.pre.in,
	ipmi-chassis/ipmi-chassis.8.pre.in: Update description.

	* ipmi-sensors/src/: Change "Sensor ID String" output to just "ID
	String" for consistency to IPMI spec.

	* freeipmi.spec.in: Update for sdr-cache dir.
	
2008-01-02  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Fix some english.

	* libfreeipmi/src/api/ipmi-lan-session-common.c: Remove left over
	debug statement.

	* ipmi-locate/ipmi-locate.8: Rename to ipmi-locate.8.pre.in.  Use
	common/doc manpages.  Remove unsupported options.

	* ipmi-locate/Makefile.am, configure.ac; Support
	ipmi-locate.8.pre.in appropriately.
	