@@ -1,5 +1,9 @@
 2007-01-22  Albert Chu <chu11@llnl.gov>
 
+	* ipmimonitoring/src/: Various consistency to other tools fixes.
+	
+2007-01-22  Albert Chu <chu11@llnl.gov>
+
 	* common/src/tool-common.c (ipmi_open): Try devices more intelligently.
 
 	* libfreeipmi/include/freeipmi/locate/ipmi-locate.h,
